--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.0.3
   flutter_secure_storage: ^9.2.2
 #  sqflite_inspector: ^latest_version
+  intl: 0.20.1
 
 
 dev_dependencies:
