gifts mvc added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
 #  sqflite_inspector: ^latest_version
   intl: 0.20.1
+  image_picker: 1.1.2
 
 
 dev_dependencies:
@@ -62,6 +63,8 @@ flutter:
 
   assets:
     - assets/Colorful Watercolor Painting.png
+    - assets/friend_placeholder.jpg
+    - assets/gift_placeholder.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
